fixed horizontal overflow issue

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -14,6 +14,8 @@ body {
     font-family: 'poppins', 'Arial', sans-serif;
     background-color: #F5F5F5;
     color: #747378;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 span {
@@ -220,7 +222,7 @@ nav {
 }
 
 section { 
-    width: 100vw;
+    max-width: 100vw;
     padding: 0px 100px;
     margin-top: 100px;
     display: flex;
